--- a/Isometric_Board/Properties/Resources.resx
+++ b/Isometric_Board/Properties/Resources.resx
@@ -121,6 +121,9 @@
   <data name="blue_isometric_cube" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\isometric_cube.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="player_cube" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\player_cube.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="white_isometric_cube" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\isometric_cube_template.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
