--- a/Isometric_Board/Properties/Resources.resx
+++ b/Isometric_Board/Properties/Resources.resx
@@ -130,6 +130,9 @@
   <data name="high_res_isometric_cube_white" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\high_res_isometric_cube_white.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="high_res_isometric_cube_white_bordered" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\high_res_isometric_cube_white_bordered.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="high_res_player_cube" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\high_res_player_cube.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
