--- a/Isometric_Board/Properties/Resources.resx
+++ b/Isometric_Board/Properties/Resources.resx
@@ -136,10 +136,22 @@
   <data name="high_res_player_cube" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\high_res_player_cube.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="large_isometric_cube" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\64x64_isometric_cube.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="player_cube" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\player_cube.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="player_main" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\player_main.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="player_shadow" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\player_shadow.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="white_isometric_cube" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\isometric_cube_template.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_64x64_isometric_tile" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\64x64_isometric_tile.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
