--- a/Isometric_Board/Properties/Resources.resx
+++ b/Isometric_Board/Properties/Resources.resx
@@ -118,11 +118,8 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="blue_isometric_cube" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\isometric_cube.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="collider_visual" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\collider_visual.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="green_floor_tile" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\green_floor_tile.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="high_res_bottom_collider" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\high_res_bottom_collider.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -139,17 +136,17 @@
   <data name="large_isometric_cube" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\64x64_isometric_cube.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="player_cube" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\player_cube.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="player_eyes_left" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\player_eyes_left.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="player_eyes_right" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\player_eyes_right.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="player_main" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\player_main.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="player_shadow" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\player_shadow.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="white_isometric_cube" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\isometric_cube_template.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="_64x64_isometric_tile" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\64x64_isometric_tile.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
